[Minor] Fix red button overflow

--- a/public/resources/css/gamelayout.css
+++ b/public/resources/css/gamelayout.css
@@ -364,6 +364,9 @@
 #block_move #card_building .building_name {
     font-weight:bold;
 }
+#block_move #card_building .redbutton {
+    width:auto;
+}
 #block_move #card_ap_cost .actionspoints_decrease {
     font-size:1.1em;
     padding:0.2em 0.2em 0.2em 0.5em;
